# idealista_scrapper

./: .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  articles.html  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  dockerfile  main.py  mock-response.html  pyproject.toml  requirements.txt  test_celery.py
idealista/: idealista_scraper.py
idealista/app/: main.py
idealista/app/api/: router.py
idealista/app/api/endpoints/: properties.py  users.py
idealista/scraper/: celery.py  main.py  redis.py  scrapper.py
idealista/scraper/endpoints/: list_page.py
src/api/: main.py
src/api/routers/: properties.py  router.py
src/core/: celery.py  logging.py
src/db/: base.py  models.py
src/scraper/: crawler.py  idealista_scraper.py
src/tasks/: tasks.py
src/tests/integration/: test_api.py
src/tests/unit/: test_parsers.py
src/tests/unit/data/: articles.html
src/tests/unit/scraper/: test_idealista_crawler.py  test_idealista_scraper.py
src/tests/unit/unit_test_scraper/: test_idealista_crawler.py  test_idealista_scraper.py
